# overlapviz

./: .gitignore  INSTALL.md  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  VENV_SETUP.md  gene_sets2.csv  overlap_results.csv  plot_data2.csv  pyproject.toml  test_install.py
datasets/: all_overlaps.csv  plotdata_overlaps.csv
docs/: API_REFERENCE.md  DETAILED_API.md  README.md  USAGE_GUIDE.md  USER_GUIDE.md
figs/: readme.md
overlapviz/: __init__.py
overlapviz/core/: CALCULATOR.md  OVERLAP_CALCULATOR_DOCUMENTATION.md  __init__.py  baseplot.py  calculator.py  calculator_test.py  plotstyle.py
overlapviz/euler/: __init__.py  euler.py
overlapviz/upset/: __init__.py  upset.py
overlapviz/utils/: __init__.py
overlapviz/venn/: __init__.py  venn.py
test/: get_shapesid_test.py  test_calculator_logic.py  test_custom_colors.py  test_venn.py  test_venn_calculator.py
