[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overlapviz"
version = "0.1.0"
description = "A Python toolkit for professional set visualization, transforming complex data overlaps into intuitive Venn and UpSet plots."
readme = "README.md"
authors = [
    {name = "Bitpulses"}
]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["venn","venn diagram", "upset plot", "euler diagram","set visualization", "data visualization", "matplotlib"]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/Bitpulses/overlapviz"
Repository = "https://github.com/Bitpulses/overlapviz"
Documentation = "https://github.com/Bitpulses/overlapviz#readme"
"Bug Tracker" = "https://github.com/Bitpulses/overlapviz/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["overlapviz*"]
exclude = ["test*", "docs*", "figs*", "datasets*"]

[tool.setuptools.package-data]
overlapviz = ["*.pkl", "*.json", "core/*.md"]

[tool.black]
line-length = 88
target-version = ['py312', 'py313']

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=overlapviz",
    "--cov-report=html",
    "--cov-report=term-missing"
]
